--- a/tai-projekt/pom.xml
+++ b/tai-projekt/pom.xml
@@ -7,12 +7,36 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>tai-projekt Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+  <spring.version>3.2.5.RELEASE</spring.version>
+  </properties>
   <dependencies>
   	<dependency>
   		<groupId>com.dropbox.core</groupId>
   		<artifactId>dropbox-core-sdk</artifactId>
   		<version>1.7.5</version>
   	</dependency>
+  	<dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>${spring.version}</version>
+    </dependency>
+	<dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-jdbc</artifactId>
+        <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>${spring.version}</version>
+        <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
