--- a/tai-projekt/src/main/webapp/WEB-INF/web.xml
+++ b/tai-projekt/src/main/webapp/WEB-INF/web.xml
@@ -4,14 +4,20 @@
 
 <web-app>
 	<display-name>dropbox and spring webapp</display-name>
+
 	<servlet>
 		<servlet-name>dropbox</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	
+
 	<servlet-mapping>
 		<servlet-name>dropbox</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	
 </web-app>
