--- a/tai-projekt/pom.xml
+++ b/tai-projekt/pom.xml
@@ -5,6 +5,7 @@
 	<artifactId>tai-projekt</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
+	
 	<name>tai-projekt Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<properties>
@@ -47,19 +48,9 @@
 			<artifactId>shiro-spring</artifactId>
 			<version>1.2.2</version>
 		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
-			<scope>provided</scope>
-		</dependency>
 	</dependencies>
-	<build>
+	<build>	
+	<finalName>tai-dropbox</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
