--- a/tai-projekt/pom.xml
+++ b/tai-projekt/pom.xml
@@ -48,6 +48,11 @@
 			<artifactId>shiro-spring</artifactId>
 			<version>1.2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+		</dependency>
 	</dependencies>
 	<build>	
 	<finalName>tai-dropbox</finalName>
