--- a/tai-projekt/pom.xml
+++ b/tai-projekt/pom.xml
@@ -53,6 +53,11 @@
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.6.4</version>
+		</dependency>
 	</dependencies>
 	<build>	
 	<finalName>tai-dropbox</finalName>
