--- a/tai-projekt/pom.xml
+++ b/tai-projekt/pom.xml
@@ -103,6 +103,15 @@
 			<version>1.2</version>
 		</dependency>
 	</dependencies>
+	<reporting>
+	<plugins>
+	<plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.9.1</version>
+    </plugin>
+	</plugins>
+	</reporting>
 	<build>
 		<finalName>tai-dropbox</finalName>
 		<plugins>
